# AgentWhetters-mle-bench

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
amber/: amber-manifest-green.json5  amber-manifest-purple.json5
src/: agent.py  instructions.txt  server.py
src/purple/: README.md  ml_toolkit.py  server.py
